results/SVCOMP/2-shot/log-ArrayWhatNot-2024_03_18_22_53_30.txt
class ArrayWhatNot {

  class what_not {
  };

  public static int func(int size) {
    //@ requires size >= 8;
    //@ ensures \result == -1 || \result == 0 || \result == 1;
    //@ ensures \result == -1 ==> size < 8;
    //@ ensures \result == 0 ==> int_array[7] != 7 || what_not_array.length != size;
    //@ ensures \result == 1 ==> int_array[7] == 7 && what_not_array.length == size;
    public static int func(int size) {
        if (size < 8) return -1;

        int int_array[] = new int[size];

        for (int i = 0; i < size; i++)
            int_array[i] = i;

        if (int_array[7] != 7)
            return 0;

        what_not what_not_array[] = new what_not[size];

        if (what_not_array.length != size)
            return 0;
        return 1;
    }
}
/home/max/Documents/JMLGPT/tmp/ArrayWhatNot.java:12: error: ';' expected
    public static int func(int size) {
                          ^
/home/max/Documents/JMLGPT/tmp/ArrayWhatNot.java:12: error: ';' expected
    public static int func(int size) {
                                   ^
/home/max/Documents/JMLGPT/tmp/ArrayWhatNot.java:29: error: reached end of file while parsing
}
 ^
3 errors

